Redesign resume site layout and content

--- a/index.html
+++ b/index.html
@@ -2,93 +2,136 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Swarnadeep Karmakar | Engineering Resume</title>
+  <title>Swarnadeep Karmakar | Resume</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Swarnadeep Karmakar — Engineering student at BITS Pilani with experience in ML, systems, and hardware research.">
+  <meta name="description" content="Swarnadeep Karmakar — Engineering student at BITS Pilani working across ML, systems, and hardware research.">
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-<main>
+  <div class="page">
+    <header class="hero">
+      <div class="hero-top">
+        <p class="eyebrow">Engineering • ML • Systems • Hardware</p>
+        <div class="hero-actions">
+          <a class="chip" href="mailto:skar7503@gmail.com">Email</a>
+          <a class="chip" href="https://github.com/stellarb0rg">GitHub</a>
+          <a class="chip" href="swarnadeep-resume.pdf">Resume PDF</a>
+        </div>
+      </div>
+      <h1>Swarnadeep Karmakar</h1>
+      <p class="hero-title">Hi, I&apos;m Swarnadeep.</p>
+      <p class="hero-subtitle">
+        Engineering student at BITS Pilani working across ML, systems, and hardware research.
+      </p>
+      <div class="hero-meta">
+        <span>BITS Pilani • EEE & Chemistry</span>
+        <span>Minor in Computing & Intelligence</span>
+      </div>
+    </header>
 
-<header>
-  <h1>Swarnadeep Karmakar</h1>
-  <div class="subtitle">
-    BITS Pilani · EEE & Chemistry · Minor in Computing · ML · Systems · Hardware
+    <section class="section">
+      <div class="section-header">
+        <h2>Skills</h2>
+        <p>Focused clusters that map to how I build and ship.</p>
+      </div>
+      <div class="grid">
+        <article class="card">
+          <h3>Machine Learning &amp; AI</h3>
+          <ul>
+            <li>LSTM, GRU, BiLSTM, TCN</li>
+            <li>PyTorch, TensorFlow</li>
+            <li>Spectral &amp; time-series modeling</li>
+          </ul>
+        </article>
+        <article class="card">
+          <h3>Systems &amp; Software</h3>
+          <ul>
+            <li>C++, Java, Python, SQL</li>
+            <li>Operating Systems, DBMS</li>
+            <li>Kafka, Kubernetes, Azure</li>
+          </ul>
+        </article>
+        <article class="card">
+          <h3>Hardware &amp; Robotics</h3>
+          <ul>
+            <li>PCB Design</li>
+            <li>Embedded Systems</li>
+            <li>CubeSat ADCS, Sensors</li>
+          </ul>
+        </article>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="section-header">
+        <h2>Experience</h2>
+        <p>Hands-on hardware work supporting robotics and sensing.</p>
+      </div>
+      <article class="card highlight">
+        <div class="card-top">
+          <div>
+            <h3>PCB Design Intern</h3>
+            <p class="muted">CSIR – CEERI</p>
+          </div>
+          <span class="pill">May 2024 – Jul 2024</span>
+        </div>
+        <p>
+          Designed compact PCB modules for laser and temperature drivers enabling THz-based
+          robotic scanning.
+        </p>
+      </article>
+    </section>
+
+    <section class="section">
+      <div class="section-header">
+        <h2>Projects</h2>
+        <p>Modeling, analysis, and tooling I&apos;ve built recently.</p>
+      </div>
+      <div class="grid">
+        <article class="card">
+          <h3>Transformer Winding Fault Analysis</h3>
+          <p>
+            Designed spectrally-aware residual TCN with FFT feature injection; achieved 97.6%
+            accuracy on real lab data.
+          </p>
+          <a class="link" href="https://github.com/stellarb0rg/project-link">View on GitHub</a>
+        </article>
+        <article class="card">
+          <h3>WolframBeta Graphing Calculator</h3>
+          <p>
+            Java Swing application with interactive plotting, calculus engine, JSON persistence,
+            and SVG export.
+          </p>
+          <a class="link" href="https://github.com/stellarb0rg/project-link">View on GitHub</a>
+        </article>
+      </div>
+    </section>
+
+    <section class="section contact">
+      <div class="section-header">
+        <h2>Contact</h2>
+        <p>Let&apos;s build something with signal, systems, and hardware in the loop.</p>
+      </div>
+      <div class="contact-card">
+        <div>
+          <p class="label">Email</p>
+          <a href="mailto:skar7503@gmail.com">skar7503@gmail.com</a>
+        </div>
+        <div>
+          <p class="label">GitHub</p>
+          <a href="https://github.com/stellarb0rg">github.com/stellarb0rg</a>
+        </div>
+        <div>
+          <p class="label">Resume</p>
+          <a href="swarnadeep-resume.pdf">swarnadeep-resume.pdf</a>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <span>Built for mobile-first reading.</span>
+      <span>Last updated February 2026.</span>
+    </footer>
   </div>
-  <div class="links">
-    <a href="mailto:skar7503@gmail.com">Email</a>
-    <a href="https://github.com/stellarb0rg">GitHub</a>
-    <a href="swarnadeep-resume.pdf">PDF</a>
-  </div>
-</header>
-
-<section>
-  <h2>Education</h2>
-  <ul>
-    <li>
-      <strong>BITS Pilani, Hyderabad</strong><br>
-      B.E. Electrical & Electronics Engineering + M.Sc. Chemistry<br>
-      Minor in Computing and Intelligence
-    </li>
-    <li>
-      Coursework: DSA, OS, OOP, ML, AI, Cryptography, Optimization, Linear Algebra, Probability
-    </li>
-  </ul>
-</section>
-
-<section>
-  <h2>Technical Skills</h2>
-  <ul>
-    <li><strong>Languages:</strong> Java, C++, Python, C, SQL, Bash, LaTeX</li>
-    <li><strong>ML / Data:</strong> PyTorch, TensorFlow, OpenCV, NumPy, Pandas, W&B</li>
-    <li><strong>Systems / Tools:</strong> Git, Kafka, Kubernetes, Azure Databricks, CosmosDB, Postman</li>
-  </ul>
-</section>
-
-<section>
-  <h2>Experience</h2>
-  <ul>
-    <li>
-      <strong>CSIR–CEERI</strong> — PCB Design Intern<br>
-      Designed compact PCB integrating laser and temperature drivers for THz wave generation,
-      enabling high-resolution robotic scanning for material defect detection.
-    </li>
-  </ul>
-</section>
-
-<section>
-  <h2>Projects</h2>
-  <ul>
-    <li>
-      <strong>Transformer Winding Fault Analysis</strong><br>
-      Benchmarked LSTM, GRU, BiLSTM, and BiGRU models on real transformer data; demonstrated
-      consistent gains from bidirectional architectures. Designed a spectrally-aware residual TCN
-      with FFT-based feature injection, achieving 97.6% accuracy with robustness to frequency drift.
-    </li>
-
-    <li>
-      <strong>WolframBeta — Graphing Calculator</strong><br>
-      Built a Java Swing application with interactive plotting, symbolic calculus, JSON persistence,
-      and SVG export using Graphics2D.
-    </li>
-  </ul>
-</section>
-
-<section>
-  <h2>Leadership & Volunteering</h2>
-  <ul>
-    <li>
-      <strong>Team Lead — Hyperion SEDS CubeSat</strong><br>
-      Led 25-member multidisciplinary team; developed reaction-wheel ADCS prototype and conducted
-      Arduino and ADCS workshops.
-    </li>
-    <li>
-      Technical Member — Artemis SEDS Rocketry, Aeolus Drone Club, PHoEnix Association
-    </li>
-  </ul>
-</section>
-
-</main>
 </body>
 </html>
